--- a/stylesheets/global/#notifiers.sass
+++ b/stylesheets/global/#notifiers.sass
@@ -70,14 +70,3 @@ div.flash.warning
 		background-image: url(../images/icons/UI/loading.gif)
 		padding-left: 26px
 		vertical-align: bottom
-
-div.tooltip
-	&:hover
-		span.tip
-			display: block
-			position: absolute
-			top: 12px
-			width: 270px
-			border: 1px solid #555
-			padding: 4px
-			font-size: 0.8em
